# llm-project

./: .env.example  .gitignore  README.md  main.py  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: setup_huggingface.py
src/: __init__.py
src/my_llm_project/api/: __init__.py
src/my_llm_project/api/routes/: llm_routes.py  pdf_chunks_routes.py  pdf_routes.py
src/my_llm_project/core/: config.py  exceptions.py
src/my_llm_project/models/: llm_models.py
src/my_llm_project/services/: answer_generate.py  llm_service.py  pdf_chunker.py  summarization_service.py
src/my_llm_project/utils/: pdf_processor.py
tests/integration/: test_integration.py
tests/unit/: test_modals.py  test_services.py
