[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-llm-project"
version = "0.1.0"
description = "A production-ready LLM project with LangChain"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
]

dependencies = [
	"langchain>=0.2.0",
	"langchain-community>=0.2.0",
	"langchain-openai>=0.2.0",
	"openai>=1.0.0",
	"python-dotenv>=1.0.0",
	"pydantic>=2.0.0",
	"pydantic-settings>=2.0.0",
	"fastapi>=0.100.0",
	"uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.4.0",
	"pytest-cov>=4.1.0",
	"pytest-asyncio>=0.21.0",
	"black>=23.0.0",
	"isort>=5.12.0",
	"flake8>=6.0.0",
	"mypy>=1.5.0",
	"pre-commit>=3.3.0",
	"httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/my_llm_project --cov-report=html --cov-report=term"
